kuberenetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starbucks-poc-svc
  labels:
    app: starbucks-poc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: starbucks-poc
